--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite-plugin-handlebars": "^1.6.0",
     "sass": "^1.69.5",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-plugin-handlebars": "^1.6.0"
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.29",
     "gsap": "^3.12.3",
     "mouse-follower": "^1.1.2",
+    "splitting": "^1.0.6",
     "swiper": "^11.0.5"
   }
 }
