--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gsap": "^3.12.3",
     "mouse-follower": "^1.1.2",
     "splitting": "^1.0.6",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "ukiyojs": "^4.1.2"
   }
 }
