--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@studio-freight/lenis": "^1.0.29",
-    "astro": "^4.0.0",
-    "gsap": "^3.12.3",
+    "lenis": "^1.1.4",
+    "astro": "^4.16.19",
+    "gsap": "^3.13.0",
     "mouse-follower": "^1.1.2",
-    "sass": "^1.69.5",
-    "splitting": "^1.0.6",
-    "swiper": "^11.0.5"
+    "sass": "^1.94.0",
+    "swiper": "^11.2.10"
   }
 }
