--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "lenis": "^1.1.4",
     "astro": "^4.16.19",
     "gsap": "^3.13.0",
+    "lenis": "^1.1.4",
     "mouse-follower": "^1.1.2",
     "sass": "^1.94.0",
-    "swiper": "^11.2.10"
+    "swiper": "^11.2.10",
+    "ukiyojs": "^4.2.0"
   }
 }
