chore: update tsconfig.json to exclude specific Astro component from build process - added exclusion for ProductsVideo.astro to streamline project structure and prevent unnecessary compilation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "checkJs": false
   },
   "include": ["src/**/*", "src/**/*.d.ts"],
-  "exclude": ["node_modules", ".astro"]
+  "exclude": ["node_modules", ".astro", "src/**/ProductsVideo.astro"]
 }
