--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,14 +29,16 @@ jobs:
           SANITY_DATASET: ${{ secrets.SANITY_DATASET }}
         run: npm run build
 
-      - name: Deploy via rsync over SSH
-        uses: burnett01/rsync-deployments@master
-        with:
-          switches: -avz --delete
-          path: dist/
-          remote_path: ${{ secrets.SITEGROUND_PATH }}
-          remote_host: ${{ secrets.SITEGROUND_HOST }}
-          remote_user: ${{ secrets.SITEGROUND_USER }}
-          remote_port: ${{ secrets.SITEGROUND_PORT }}
-          remote_key: ${{ secrets.SITEGROUND_SSH_KEY }}
-          rsh: ssh -p ${{ secrets.SITEGROUND_PORT }}
+      - name: Setup SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SITEGROUND_SSH_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan -p ${{ secrets.SITEGROUND_PORT }} ${{ secrets.SITEGROUND_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Deploy via rsync
+        run: |
+          rsync -avz --delete \
+            -e "ssh -p ${{ secrets.SITEGROUND_PORT }}" \
+            dist/ \
+            ${{ secrets.SITEGROUND_USER }}@${{ secrets.SITEGROUND_HOST }}:${{ secrets.SITEGROUND_PATH }}
